modified eCommerce.html modified style.css

--- a/eCommerce.html
+++ b/eCommerce.html
@@ -16,8 +16,7 @@
         <a href="https://en.wikipedia.org/wiki/Audemars_Piguet#:~:text=Audemars%20Piguet%20Holding%20SA%20(French,Audemars%20Piguet%20%26%20Cie%20in%201881." target="_blank" rel="noopener">About</a>
         <div class="animation start-appliances"></div>        
     </nav>
-    <img src="Audemars-Piguet-Logo.jpg" alt="Audemars Piguet" class="image"> 
-
+    <a target="_blank" href="https://www.audemarspiguet.com/com/en/home.html" rel="noopener"><img src="Audemars-Piguet-Logo.jpg" alt="Audemars Piguet" class="image" ></a> 
     <div class="container page-wrapper">
         <div class="page-inner">
           <div class="row">
